fix: 子盒完成部分